kubernetes/apps/da-bubble/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: da-bubble
  namespace: da-bubble
spec:
  replicas: 2

  selector:
    matchLabels:
      app: da-bubble

  template:
    metadata:
      labels:
        app: da-bubble

    spec:
      containers:
        - name: da-bubble
          image: ghcr.io/a-marbach/da-bubble:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 80

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
