kubernetes/apps/da-bubble/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: da-bubble
  namespace: da-bubble
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - dabubble.artur-marbach.de
      secretName: da-bubble-tls

  rules:
    - host: dabubble.artur-marbach.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: da-bubble
                port:
                  number: 80
